syntax = "proto3";

package shop.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "pagination/v1/pagination.proto";

// 库存扣减日志服务
service StockDeductionLogService {
}

// 库存扣减日志
message StockDeductionLog {
  uint32 id = 1 [
    (gnostic.openapi.v3.property) = {description: "日志ID"},
    json_name = "id"
  ]; // 日志ID

  uint32 product_id = 2 [
    (gnostic.openapi.v3.property) = {description: "商品ID"},
    json_name = "productId"
  ]; // 商品ID

  uint32 user_id = 3 [
    (gnostic.openapi.v3.property) = {description: "用户ID"},
    json_name = "userId"
  ]; // 用户ID

  string request_id = 4 [
    (gnostic.openapi.v3.property) = {description: "请求ID"},
    json_name = "requestId"
  ]; // 请求ID

  int32  quantity = 5 [
    (gnostic.openapi.v3.property) = {description: "扣减数量"},
    json_name = "quantity"
  ]; // 扣减数量

  optional google.protobuf.Timestamp create_time = 200 [json_name = "createTime", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp update_time = 201 [json_name = "updateTime", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp delete_time = 202 [json_name = "deleteTime", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}